# code-spectral-comparison

./: .gitignore  .sourcery.yaml  12h_plan.md  Makefile  README.MD  TODO.md  _quarto-book.yml  _quarto.yml  ch02_outline.md  ggseg.R  ggsegpy.qmd  great-docs.yml  miccai_atlas.rds  miccai_atlas_steps_1_2.rds  pesco-context.txt  pyproject.toml  references.bib
.github/workflows/: beeminder-commits.yml
00_preprocessing/: 00_explore_raw_look_for_artifacts.ipynb  00_explore_raw_look_for_artifacts.py  Untitled.py  autoreject_sources.ipynb  ica_single_data.py
01_clustering/: 00a_look_for_clusters_channels_kmeans.ipynb  00a_look_for_clusters_channels_kmeans.py  find_no_peak_cluster_ieeg-2.py  find_no_peak_cluster_ieeg.py
02_fooof/: 01_from_raw_to_foofed_peaks.ipynb  02_explore_foofed_peaks.py  02_specparam_ieeg.ipynb  03_specparam_sources.ipynb  04_regional_aperiodic_maps.ipynb  05_crossmodal_comparison.ipynb  06_aperiodic_correction_effects.ipynb  07_robustness_fitting_range.ipynb  08_irasa_ieeg.ipynb  09_irasa_vs_specparam.ipynb  Untitled-1.ipynb
04_raport_Dante/: 01b_segments_foofed_peaks.py  raport.md  raport1.md  raport2.md
analiza/: 01_cluster_pipeline_ieeg_sources.ipynb  02_cluster_pipeline_ctx.ipynb  02_cluster_pipeline_ctx.qmd  03_cluster_pipeline_1f_removed.ipynb  Sources.ipynb  aperiodic_paper.qmd  ggspegpy.ipynb  similarity_ieeg_vs_hd_eeg.ipynb
analiza/figures/: fig2_cluster_panels.ipynb  frauscher_centroids_glass_brain.ipynb
analiza/ideas/: aperiodic.qmd
analiza/miccai_ggseg/: frauscher_2d.parquet  frauscher_core.parquet  miccai_2d.parquet  miccai_core.parquet
changes/: changes_2026-03-28.md
chapters/: ch02.qmd  ch02_methods.qmd  ideas.qmd
miccai_build/miccai/: atlas_data.rds  colortable.rds  label_split.rds  subcort_lut.txt
miccai_build/miccai/cortical/: atlas_3d.rds  components.rds
miccai_input/: labels_neuromorphometrics.csv
notebooks/: chapter_2_figure_plan.md
notebooks/00_preprocessing/: 00_explore_raw_look_for_artifacts.ipynb  autoreject_sources.ipynb  autoreject_sources.py  ica_single_data_as_events.py  plot_creating_data_structures.py  segments.py
notebooks/01_clustering/: 00a_look_for_clusters_channels_kmeans.ipynb  clusterization.ipynb
notebooks/02_fooof/: 01_from_raw_to_foofed_peaks.ipynb  01_from_raw_to_foofed_peaks.py  02_explore_foofed_peaks.py  02_specparam_ieeg.ipynb  03_specparam_sources.ipynb  05_crossmodal_comparison.ipynb  06_aperiodic_correction_effects.ipynb  07_robustness_fitting_range.ipynb  08_irasa_ieeg.ipynb  introduction_simulation.ipynb
notebooks/03_viz/: 02regions.py
notebooks/04_raport_Dante/: 01b_segments_foofed_peaks.ipynb  01b_segments_foofed_peaks.py  bibliography.bib
notebooks/06-notebooks-testing/: Regions.ipynb  beta-specpram-test.ipynb
notebooks/figures/: Nifti.ipynb  fig2_cluster_panels.ipynb  fig2_cluster_pesco.ipynb  frauscher_centroids_glass_brain.ipynb
notes/: specparam_v2_migration.md
pesco/: pyproject.toml
pesco/pesco/: __init__.py  aperiodic.py  clusterization.py  foofexplore.py  io.py  irasa.py  peaks.py  pipeline.py  preprocess.py  spectral.py  stats.py  utils.py  vizual.py
pesco/pesco/atlases/: __init__.py
pesco/pesco/experimental/: analysis.py  cluster_plots.py  clustering.py  clusterization.py  foofexplore.py  peak_testing.py  plotting.py
pesco/tests/: conftest.py  test_io.py  test_peak_testing.py  test_plotting.py
