[project]
name = "spectral-comparison"
version = "0.1.0"
description = "Analysis of intractranial and reconstructed spectral features"
readme = "README.md"
requires-python = ">=3.13.11"
dependencies = [
    "mne>=1.12",
    "polars",
    "plotnine",
    "specparam>=2.0.0rc6",
    "pyrasa",
    "pesco",
    "seaborn",
    "great-docs",
    "autoreject",
    "neurodsp",
    "patchworklib",
    "nibabel",
    "nilearn",
    "pyvistaqt",
    "ipywidgets"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "variable-inspector",
    "ruff",
    "jupytext",
    "ipykernel",
    "pip",
    "notebook",
    "scipy-stubs",
    "ipympl",
   "nbstripout",
   "pre-commit",
   "watermark",
   "mlxtend"
    
]

[tool.uv]
package = false
link-mode = "copy"
config-settings = { editable_mode = "compat" }

[tool.uv.workspace]
members = [
    "pesco",
]

[tool.uv.sources]
pesco = { workspace = true, editable = true }
gedai = { git = "https://github.com/neurotuning/gedai" }

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.black]
line-length = 88
target-version = ['py313']

