[build-system]
requires = ["setuptools>=61",  "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pesco"
authors = [{ name = "Daniel Borek", email = "daniel.borek@ugent.be" }]
readme = "README.md"
version = "0.0.1.dev0"
description = "Project for working with MEG  and EEG data"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]

requires-python = ">=3.10"

dependencies = [
    "mne",
    "specparam>=2.0.0rc1",
    "numpy",
    "pandas",
    "h5py",
    "scikit-learn",
    "mpltex","rpy2"]


[tool.setuptools.packages.find]
include = ["pesco*"]
namespaces = false

[tool.pytest.ini_options]
pythonpath = [
    "."
]
addopts = "-v"
testpaths = ["docs"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py313']
include = '\.pyi?$'


[tool.pytest-watcher]
now = false
delay = 1.0
runner = "pytest"
runner_args = ["--picked", "--testmon", "--ignore-glob='test_data_preproc.py'"]
patterns = ["*.py"]
ignore_patterns = []

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4